Fixing spacing issues

--- a/src/components/ProfilePage.module.css
+++ b/src/components/ProfilePage.module.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
 }
 
 .logoWrapper {
@@ -24,4 +25,5 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding-top: 1.5rem; /* Add slight padding from logo */
 }
